# voice_computer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_voice_computer.py  start_default_mcp_server.py  voice_server.py
client/: requirements.txt  voice_client.py
tests/: README.md  __init__.py  run_tests.py  test_config_with_device.json  test_hf_client.py  test_hf_client_local.py  test_math_mcp_server.py  test_microphone_listener.py  test_server_client.py  test_time_mcp_server.py  test_train_mcp_server.py  test_tts_speaker.py  test_weather_mcp_server.py  test_websocket_listener.py  test_whisper_listener.py
voice_computer/: __init__.py  __main__.py  cli.py  client.py  config.py  conversation.py  conversation_handler.py  data_types.py  default_mcp_server.py  entailer.py  extractor.py  handler.py  mcp_connector.py  model_factory.py  ollama_client.py  prompt.py  server_tts_speaker.py  server_voice_listener.py  sound_thresholds.py  speaker_embeddings.py  stopwords.py  streaming_display.py  tool_agent.py  tool_handler.py  voice_client.py  voice_interface.py  whisper_listener.py
voice_computer/client/: __init__.py  base_client.py  hf_client.py  ollama_client.py
voice_computer/listeners/: __init__.py  base_listener.py  microphone_listener.py  server_voice_listener.py  sound_thresholds.py  websocket_listener.py  whisper_listener.py
voice_computer/mcp_servers/: __init__.py  brave_search_mcp_server.py  math_mcp_server.py  spotify_mcp_server.py  tfl_mcp_server.py  time_mcp_server.py  train_mcp_server.py  weather_mcp_server.py
(+7 files in other folders)
