[project]
name = "voice-computer"
version = "1.0.0"
description = "Voice-driven assistant with MCP (Model Context Protocol) integration via Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.21.0",
    "soundfile>=0.12.0",
    "pyaudio>=0.2.11",
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
]


[project.scripts]
voice-computer = "voice_computer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]
